Stop overflow of results

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -48,6 +48,7 @@ body:after{
     }
     .submit{
         background: url(/static/img/search.png) #eee no-repeat center center;
+        height: 28px;
         position: absolute;
         right: 0;
         text-indent: -999em;
@@ -83,7 +84,7 @@ body:after{
         line-height: 24px;
         text-align: right;
     }
-    p.span6{
+    p.span5{
         color: #ccc;
         line-height: 24px;
     }
